Filter reset/ added missing descriptions in layout files

--- a/app/src/main/res/layout/backpack_menu_filter.xml
+++ b/app/src/main/res/layout/backpack_menu_filter.xml
@@ -8,9 +8,10 @@
     >
 
     <ImageView
-        android:id="@+id/filter_achtegrond"
+        android:id="@+id/filter_menu_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/filter_menu_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -20,25 +21,27 @@
         app:srcCompat="@drawable/filter_achtergrond" />
 
     <ImageView
-        android:id="@+id/filter_inhoud"
+        android:id="@+id/filter_menu_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/filter_menu_content"
         android:paddingTop="40dp"
         android:paddingBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/filter_achtegrond"
-        app:layout_constraintEnd_toEndOf="@+id/filter_achtegrond"
-        app:layout_constraintStart_toStartOf="@+id/filter_achtegrond"
-        app:layout_constraintTop_toTopOf="@+id/filter_achtegrond"
+        app:layout_constraintBottom_toBottomOf="@+id/filter_menu_background"
+        app:layout_constraintEnd_toEndOf="@+id/filter_menu_background"
+        app:layout_constraintStart_toStartOf="@+id/filter_menu_background"
+        app:layout_constraintTop_toTopOf="@+id/filter_menu_background"
         app:srcCompat="@drawable/filter_inhoud" />
 
     <ImageView
         android:id="@+id/filter_boy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/filter_boy"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/filter_inhoud"
-        app:layout_constraintStart_toStartOf="@+id/filter_inhoud"
-        app:layout_constraintTop_toTopOf="@+id/guide_items_horizontal_end"
+        app:layout_constraintEnd_toEndOf="@+id/filter_menu_content"
+        app:layout_constraintStart_toStartOf="@+id/filter_menu_content"
+        app:layout_constraintTop_toTopOf="@+id/guide_filter_btn_horizontal_2"
         app:srcCompat="@drawable/filter_boy" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -49,14 +52,14 @@
         app:layout_constraintGuide_percent="0.15" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide_items_horizontal_start"
+        android:id="@+id/guide_filter_btn_horizontal_1"
         android:layout_width="8dp"
         android:layout_height="12dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.27" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide_items_horizontal_end"
+        android:id="@+id/guide_filter_btn_horizontal_2"
         android:layout_width="8dp"
         android:layout_height="12dp"
         android:orientation="horizontal"
@@ -90,10 +93,11 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_start"
+        android:contentDescription="@string/filter_btn_text"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:layout_constraintEnd_toStartOf="@+id/filterknop_audio"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/filter_inhoud"
+        app:layout_constraintStart_toEndOf="@+id/filter_menu_content"
         app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_1"
         app:srcCompat="@drawable/filterknop_teksten" />
 
@@ -103,7 +107,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_start"
+        android:contentDescription="@string/filter_btn_audio"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:layout_constraintEnd_toStartOf="@+id/filterknop_foto"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/filterknop_teksten"
@@ -115,7 +120,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_start"
+        android:contentDescription="@string/filter_btn_foto"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_3"
         app:layout_constraintStart_toEndOf="@+id/filterknop_audio"
         app:srcCompat="@drawable/filterknop_foto" />
@@ -126,12 +132,13 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_end"
+        android:contentDescription="@string/filter_btn_drawing"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_2"
         app:layout_constraintEnd_toStartOf="@+id/filterknop_film"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/filter_inhoud"
+        app:layout_constraintStart_toEndOf="@+id/filter_menu_content"
         app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_1"
-        app:layout_constraintTop_toTopOf="@+id/guide_items_horizontal_start"
+        app:layout_constraintTop_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:srcCompat="@drawable/filterknop_tekeningen" />
 
     <ImageButton
@@ -140,11 +147,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_end"
+        android:contentDescription="@string/filter_btn_video"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_2"
         app:layout_constraintEnd_toStartOf="@+id/filterknop_extern_bestand"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/filterknop_tekeningen"
-        app:layout_constraintTop_toTopOf="@+id/guide_items_horizontal_start"
+        app:layout_constraintTop_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:srcCompat="@drawable/filterknop_film" />
 
     <ImageButton
@@ -153,11 +161,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FFFFFF"
 
-        app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_end"
+        android:contentDescription="@string/filter_btn_file"
+        app:layout_constraintBottom_toTopOf="@+id/guide_filter_btn_horizontal_2"
         app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/filterknop_film"
-        app:layout_constraintTop_toTopOf="@+id/guide_items_horizontal_start"
+        app:layout_constraintTop_toTopOf="@+id/guide_filter_btn_horizontal_1"
         app:srcCompat="@drawable/filterknop_extern_bestand" />
 
     <ImageButton
@@ -165,8 +174,10 @@
         android:layout_width="66dp"
         android:layout_height="42dp"
         android:backgroundTint="#0000FF"
-        app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_3"
-        app:layout_constraintTop_toTopOf="@+id/filter_achtegrond"
+        android:contentDescription="@string/close_filter_btn"
+        app:layout_constraintEnd_toEndOf="@+id/filter_menu_content"
+        app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_2"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     <SearchView
