--- a/app/src/main/res/xml/filtermenu_slide.xml
+++ b/app/src/main/res/xml/filtermenu_slide.xml
@@ -33,13 +33,16 @@
         <Constraint
             android:id="@id/backpack_menu_filter"
             app:layout_constraintEnd_toStartOf="@+id/guide_filtermenu_vertical"
-            app:layout_constraintStart_toStartOf="parent"></Constraint>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/motionLayout"
+            app:layout_constraintTop_toTopOf="@+id/motionLayout"
+            />
 
         <Constraint
             android:id="@id/guide_items_vertical_start"
-            app:layout_constraintGuide_percent="0.32">
+            app:layout_constraintGuide_percent="0.32"/>
 
-        </Constraint>
+
     </ConstraintSet>
 
 
