--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -8,6 +8,7 @@
         <variable
             name="backpackViewModel"
             type="be.hogent.faith.faith.backpackScreen.BackpackViewModel" />
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.motion.widget.MotionLayout
@@ -92,8 +93,8 @@
             android:id="@+id/recyclerview_backpack"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:visibility="@{backpackViewModel.viewButtons == false ? View.GONE : View.VISIBLE}"
             android:scrollbars="horizontal|vertical"
-
             app:layout_constraintBottom_toTopOf="@+id/guide_rv_horizontal_2"
             app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_end"
             app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_start"
@@ -104,6 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/prullenbak"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_end"
             app:layout_constraintTop_toTopOf="@+id/guide_rv_horizontal_2"
             app:srcCompat="@drawable/prullenbak" />
@@ -112,6 +114,7 @@
             android:id="@+id/btn_backpack_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:background="@drawable/search_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/add_btn"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
   />
@@ -129,6 +133,7 @@
         <ImageButton
             android:id="@+id/btn_backpack_draw_cancel"
             android:layout_width="@dimen/material_icon_width"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:layout_height="@dimen/material_icon_height"
             android:background="@drawable/ic_return"
             android:contentDescription="@string/cancel"
