--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -174,4 +174,10 @@
         <item name="android:colorActivatedHighlight">@color/red</item>
         <item name="android:colorControlActivated">@color/red</item>
     </style>
+
+    <style name="PopupMenu.AddDetail" parent="@style/Widget.AppCompat.PopupMenu">
+        <item name="android:dropDownHorizontalOffset">-8dp</item>
+        <item name="android:dropDownVerticalOffset">4dp</item>
+        <item name="android:listPreferredItemHeightSmall">8dp</item>
+    </style>
 </resources>
